--- a/includes/google_analytics.html
+++ b/includes/google_analytics.html
@@ -1,9 +1,9 @@
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-0BM7X404RV"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-935TQTG95N"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-0BM7X404RV');
+  gtag('config', 'G-935TQTG95N');
 </script>
